Created new webassembly blazor.net application

--- a/Blazor.net/wwwroot/index.html
+++ b/Blazor.net/wwwroot/index.html
@@ -1,13 +1,16 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Blazor Minimal App</title>
-    <link href="/main.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Blazor.Net</title>
+    <base href="/" />
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <myApp>
-        <img id="loading_img" src="/images/loading.gif" />
-    </myApp>
+    <app>Loading...</app>
+
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
